force-app/main/default/objects/CMN_WebserviceCallQueue__c/CMN_WebserviceCallQueue__c.object-meta.xml
<CustomObject>
    <description>A object which is used to orchestrate and track webservices (inbound and outbound). By injecting an item into this object will asynchronously manage a call to external web service.</description>
    <label>Webservice Call Queue</label>
    <nameField>
        <displayFormat>WCQ-{0000000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webservice Calls Queue</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>