force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_Errors__c.field-meta.xml
<CustomField>
    <fullName>CMN_Errors__c</fullName>
    <description>If any errors were encountered whilst processing a request these will be logged in this field</description>
    <label>Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>