force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_MockedResponse__c.field-meta.xml
<CustomField>
    <fullName>CMN_MockedResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is set to true if the service was putting into mocking mode when the API call was made and the response is a mocked response.</description>
    <label>Mocked Response</label>
    <type>Checkbox</type>
</CustomField>