force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_NextRetry__c.field-meta.xml
<CustomField>
    <fullName>CMN_NextRetry__c</fullName>
    <description>Time of next retry to call webservice</description>
    <label>Next Retry</label>
    <type>DateTime</type>
</CustomField>