force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_Request__c.field-meta.xml
<CustomField>
    <fullName>CMN_Request__c</fullName>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>