force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_Request_Parameters__c.field-meta.xml
<CustomField>
    <fullName>CMN_Request_Parameters__c</fullName>
    <description>Name value pair of parameters used when passing values between the controller and front end</description>
    <label>Request Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>