force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_RequestTimeTaken__c.field-meta.xml
<CustomField>
    <fullName>CMN_RequestTimeTaken__c</fullName>
    <description>The time taken in Milliseconds for a request to an endpoint to complete. It doesn&apos;t include any processing of the response</description>
    <label>Request Time Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>