force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_Response__c.field-meta.xml
<CustomField>
    <fullName>CMN_Response__c</fullName>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>