force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_Retries__c.field-meta.xml
<CustomField>
    <fullName>CMN_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>