force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_Service__c.field-meta.xml
<CustomField>
    <fullName>CMN_Service__c</fullName>
    <description>The name of the service; either inbound or outbound.</description>
    <label>Service</label>
    <length>80</length>
    <type>Text</type>
</CustomField>