force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_Status__c.field-meta.xml
<CustomField>
    <fullName>CMN_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Retrying</fullName>
            </value>
            <value>
                <fullName>Web Service Call Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>