force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>CMN_StatusCode__c</fullName>
    <description>The HTTP Status code of the request</description>
    <label>Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>