force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_TriggeringObjectId__c.field-meta.xml
<CustomField>
    <fullName>CMN_TriggeringObjectId__c</fullName>
    <label>Triggering Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>