force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_TriggeringObjectUrl__c.field-meta.xml
<CustomField>
    <fullName>CMN_TriggeringObjectUrl__c</fullName>
    <description>Open the triggering objects in a new page</description>
    <formula>HYPERLINK(&quot;/&quot; +  CMN_TriggeringObjectId__c , &quot;Open&quot;)</formula>
    <label>View Trigger Object</label>
    <type>Text</type>
</CustomField>