force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_Type__c.field-meta.xml
<CustomField>
    <fullName>CMN_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>