force-app/main/default/objects/CMN_WebserviceCallQueue__c/fields/CMN_URL__c.field-meta.xml
<CustomField>
    <fullName>CMN_URL__c</fullName>
    <description>The Url to which the request is being sent</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>