force-app/main/default/objects/CMN_WebserviceCallQueue__c/listViews/CMN_AllDetail.listView-meta.xml
<ListView>
    <fullName>CMN_AllDetail</fullName>
    <columns>NAME</columns>
    <columns>CMN_Service__c</columns>
    <columns>CMN_Type__c</columns>
    <columns>CMN_Status__c</columns>
    <columns>CMN_StatusCode__c</columns>
    <columns>CMN_Request__c</columns>
    <columns>CMN_Response__c</columns>
    <columns>CMN_RequestTimeTaken__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>